# msgs_suturo_1718

knowledge_msgs/: CMakeLists.txt
knowledge_msgs/msg/: DropObject.msg  GraspObject.msg  GraspObjectHumanInteraction.msg  Gripper.msg  PerceivedObject.msg  PerceivedObjectBoundingBox.msg  SpawnAttachedObject.msg  TrainingData.msg
knowledge_msgs/srv/: Classify.srv  EmptyGripper.srv  GetFixedKitchenObjects.srv  GetObjectAttachedToGripper.srv  GraspIndividual.srv  ObjectsToPick.srv  PerceivedObject.srv  PlaceObject.srv  ProcessPercivedObject.srv  PushObject.srv  StoragePlace.srv
motion_msgs/: CMakeLists.txt
motion_msgs/action/: Gripper.action  MovingCommand.action
motion_msgs/srv/: GetGripperPosition.srv
object_detection/launch/: main_sim.launch
object_detection/srv/: PokeObject.srv
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: Histogram.msg  ObjectClouds.msg  ObjectInformation.msg  ObjectsInfo.msg
vision_msgs/srv/: GetObjectClouds.srv  objects.srv  poses.srv
